--- a/css/main.css
+++ b/css/main.css
@@ -374,12 +374,124 @@ footer #dark-mode #tgl-wrapper .tgl:checked + .tgl-btn:after {
 	padding: 15px;
 	margin: 0 auto;
 	border: 1px solid;
+    border-radius: 15px;
 }
 
 #main-contact-content label {
     display: block;
 	margin-bottom: 15px;
 	text-align: center;
+}
+
+/*===========================================*\
+  Subpage-1 SPECIFIC CSS 
+\*===========================================*/
+
+#subpage-1-content {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: aliceblue;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+/*===========================================*\
+  Subpage-2 SPECIFIC CSS 
+\*===========================================*/
+
+#subpage-2-content {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: aliceblue;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+/*===========================================*\
+  STYLE GUIDE SPECIFIC CSS 
+\*===========================================*/
+
+#style-guide-content {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: aliceblue;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+/*===========================================*\
+  WIREFRAMES SPECIFIC CSS 
+\*===========================================*/
+
+#wireframes-content {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: aliceblue;
+    text-align: center;
+    padding-bottom: 30px;
+    display: grid;
+    grid-template-rows: auto 1fr auto auto;
+    grid-template-columns: 1fr 1fr;
+}
+
+#wireframes-content #wireframe-text {
+    grid-column: 1/3;
+    grid-row: 1;
+}
+
+#wireframes-content #home {
+    margin-top: 30px;
+    grid-column: 1/3;
+    grid-row: 2;
+}
+
+#wireframes-content #home-wireframe {
+    height: 700px;
+    width: auto;
+}
+
+#wireframes-content #contact_us {
+    margin-top: 30px;
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#wireframes-content #contact-wireframe {
+    height: 500px;
+    width: auto;
+}
+
+#wireframes-content #about_us {
+    margin-top: 30px;
+    grid-column: 2;
+    grid-row: 3;
+}
+
+#wireframes-content #about-wireframe {
+    height: 500px;
+    width: auto;
+}
+
+#wireframes-content #guides {
+    margin-top: 30px;
+    grid-column: 1;
+    grid-row: 4;
+}
+
+#wireframes-content #guides-wireframe {
+    height: 500px;
+    width: auto;
+}
+
+#wireframes-content #lesson_1 {
+    margin-top: 30px;
+    grid-column: 2;
+    grid-row: 4;
+}
+
+#wireframes-content #lesson-1-wireframe {
+    height: 500px;
+    width: auto;
 }
 
 /*===========================================*\
