--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,9 @@ header {
 header #company-name {
     grid-column: 2;
     padding-left: 10px;
+    font-size: 30px;
+    margin-bottom: -10px;
+    margin-top: 15px;
 }
 
 header a {
